fixed issue where elements shifted when datepicker clicked

--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-  margin-top: 80px;
+  margin-top: 50px;
 }
 
 li, .table{
@@ -25,7 +25,7 @@ p, .stats-text, .comment-text {
 }
 
 .top-offset {
-	margin-top: 30px;
+	padding-top: 20px;
 }
 
 .sign-in {
